# src/types/booking.ts
@@ -5,6 +5,11 @@ import type {
 } from '@/types/contracts/uc-005'
 import type { components as Uc006 } from '@/types/contracts/uc-006'
 import type { components as Uc007 } from '@/types/contracts/uc-007'
+import type {
+  components as Uc010,
+  operations as Uc010Operations,
+} from '@/types/contracts/uc-010'
+import type { components as Uc011 } from '@/types/contracts/uc-011'
 
 export type Granularity = Uc004['schemas']['Granularity']
 export type ReservationStatus = Uc004['schemas']['Reservation']['status']
@@ -21,5 +26,15 @@ export type Reservation = Uc004['schemas']['Reservation']
 
 export type MyReservations = Uc006['schemas']['MyReservations']
 export type ReservationSummary = Uc006['schemas']['ReservationSummary']
+export type ResourceType = ReservationSummary['resourceType']
 
 export type CancelResult = Uc007['schemas']['CancelResult']
+
+export type AvailableRoom = Uc010['schemas']['AvailableRoom']
+export type RoomSearchResults = Uc010['schemas']['RoomSearchResults']
+export type RoomSearchParams = NonNullable<
+  Uc010Operations['searchAvailableRooms']['parameters']['query']
+>
+
+export type ReserveRoomRequest = Uc011['schemas']['ReserveRoomRequest']
+export type RoomReservation = Uc011['schemas']['RoomReservation']
